@@ -13,4 +13,3 @@ local.properties
 build/
 .vagrant/
 *console.log
-maven-android-sdk-deployer/
